new branch kafka-manager-new

--- a/app/views/navigation/defaultMenu.scala.html
+++ b/app/views/navigation/defaultMenu.scala.html
@@ -12,8 +12,8 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <img src="@routes.Assets.versioned("images/favicon.png")">
-            <a class="navbar-brand un-float-me" href="@routes.Application.index()">Kafka Manager</a>
+	    <img src="@routes.Assets.versioned("images/favicon.png")"><font color="red">旧版即将下线，请访问
+		    <a class="navbar-brand un-float-me" href="https://xmen.intra.ke.com/cmak/online/rd">新版CMAK</a></font>
         </div>
         @navHtml
     </div>
