--- a/app/views/navigation/clusterMenu.scala.html
+++ b/app/views/navigation/clusterMenu.scala.html
@@ -11,9 +11,9 @@
                 <!--  Display three horizontal lines when navbar collapsed. -->
                 <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span>
             </button>
-            <img src="@routes.Assets.versioned("images/favicon.png")">
-            <a class="navbar-brand un-float-me" href="@routes.Application.index()">
-                Kafka Manager</a><span class="label label-primary">@cluster</span>
+            <img src="@routes.Assets.versioned("images/favicon.png")"><font color="red">旧版即将下线，请访问
+            <a class="navbar-brand un-float-me" href="https://xmen.intra.ke.com/cmak/online/rd">
+		    新版CMAK</a></font><span class="label label-primary">@cluster</span>
         </div>
         @menuNav(menuTitle,menuItem,menuList)
     </div>
